Test Add particles configuration for interactive background effect - Introduced a new JSON configuration file for particles. - Configured particle properties including number, color, shape, opacity, size, and movement. - Set up interactivity modes such as hover and click effects. - Enabled retina detection for better display on high-resolution screens.

--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -2,6 +2,11 @@ body {
     margin: 0;
     overflow: hidden; 
     font-family: 'Segoe UI', sans-serif;
+   -webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	position: relative;
+	width: 100%;
+	background-color: black;
 }
 
 #btn_toogle {
