--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -22,8 +22,21 @@ body {
 }
 
 body{
-   background-color: #EEEEEE; 
+   background-color: black;
+   margin: 0;
+   padding: 0;
 }
+
+.background {
+    position: absolute;
+    display: block;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    z-index: -1;
+  }
+
 
 footer{
     background-color: #0077b6;
