--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
     <h1>NyrioMotion</h1>
 </header>  
 <body>
+   
     <div>
         <nav>
             <ul>
@@ -28,6 +29,11 @@
     <script src="/static/JS/leap-1.1.1.js"></script>
     <script src="/static/JS/DataLeap.js"></script>
     <script src="/static/JS/mesFonctions.js"></script>
+
+    <canvas class="background"></canvas>
+    <!-- https://www.jsdelivr.com/package/npm/particlesjs?tab=files&path=dist -->
+    <script src="https://cdn.jsdelivr.net/npm/particlesjs@2.2.3/dist/particles.min.js"></script>
+    <script src="/static/JS/particle.js"></script>
 </body>
 <footer>
     
