--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,10 @@
     <div>
         <nav>
             <ul>
+        
+                <li><a href="/" id="Home">Home</a></li>
                 <li><a href="/" id="Documentation">Documentation</a></li>
+                <li><a href="/" id="Demo_video">DemoVideo</a></li>
                 <li><a href="/about" id="about">À propos</a></li>
                 <li><a href="/contact" id="contact">Contact</a></li>
             </ul>
@@ -20,11 +23,14 @@
     </div>
 
     <p id="statut">Connectez votre Leap Motion...</p>
-    <p>Position X: <span id="pos_x">0</span> mm</p>
-    <p>Position Y: <span id="pos_y">0</span> mm</p>
-    <p>Position Z: <span id="pos_z">0</span> mm</p>
-    <p>Pincement (Clic): <span id="pinch">Non</span></p>
-    <p>Poing (Avancer): <span id="grab">Non</span></p>
+
+    <div id="content_body">
+        <p>Position X: <span id="pos_x">0</span> mm</p>
+        <p>Position Y: <span id="pos_y">0</span> mm</p>
+        <p>Position Z: <span id="pos_z">0</span> mm</p>
+        <p>Pincement (Clic): <span id="pinch">Non</span></p>
+        <p>Poing (Avancer): <span id="grab">Non</span></p>
+    </div>
     <button id="btn_toogle">Start/Stop</button>
     <script src="/static/JS/leap-1.1.1.js"></script>
     <script src="/static/JS/DataLeap.js"></script>
